syntax = "proto3";

package genx;

service ModelService {
  rpc LoadModel(LoadModelRequest) returns (LoadModelResponse) {}
  rpc UnloadModel(UnloadModelRequest) returns (UnloadModelResponse) {}
  rpc GetModelInfo(GetModelInfoRequest) returns (GetModelInfoResponse) {}
  rpc GetEmbedding(GetEmbeddingRequest) returns (GetEmbeddingResponse) {}
}

message LoadModelRequest {
  string model_id = 1;
  string model_name = 2;
  string model_type = 3; // "embedding" or "llm"
  map<string, string> config = 4; // e.g., {"device": "cuda"}
}

message LoadModelResponse {
  string model_id = 1;
  string status = 2;
  string error = 3;
}

message UnloadModelRequest {
  string model_id = 1;
}

message UnloadModelResponse {
  string model_id = 1;
  string status = 2;
  string error = 3;
}

message GetModelInfoRequest {
  string model_id = 1;
}

message GetModelInfoResponse {
  string model_id = 1;
  string model_name = 2;
  string model_type = 3;
  string status = 4;
  string error = 5;
}

message GetEmbeddingRequest {
  string model_id = 1;
  repeated string texts = 2;
}

message GetEmbeddingResponse {
  string model_id = 1;
  string status = 2;
  repeated float embeddings = 3;
  string error = 4;
}